# nu_plugin_port_scan

./: .gitignore  Cargo.toml  README.md  build.nu  nupm.nuon  package.nuon
.github/workflows/: dependency-update.yaml  publish.yml
src/: main.rs  port_scan.rs
